---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "const _ : 1 ..  := 'c'"
---
"_"@"src/main.t:6..7" [ConstVar(Const, No)]: range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:19..22: mismatched types
| note for src/main.t:19..22: this is of type `char`
| note for src/main.t:10..14: this is of type `1 .. {unknown}`
| info: `char` is not assignable into `1 .. {unknown}`
